--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <div style="margin: 5em auto; width: 400px; line-height: 1.5">
     <h1 style="text-align: center">Hello!</h1>
-    <p>Si tu vois ce message, c'est que ton serveur est bien lancé !</p>
-    <div>Désormais, tu dois venir utiliser l'API</div>
+    <p>Si tu vois ce message, c'est que ton serveur est lancé !</p>
+    <div>Désormais, tu peux venir utiliser l'API</div>
     <ul style="display: inline-block; margin-top: .2em">
       <li>listTask : <code>GET /</code></li>
     </ul>
